--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: Monesh's Blog
+theme: jekyll-theme-minimal
 title: Monesh's Blog
 description: Bookmark this to keep an eye on my project updates!
